--- a/canvas/src/main/resources/templates/index.html
+++ b/canvas/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         <input type="range" id="lineWidth" min="1" max="20" value="2">
         
         <button id="saveBtn">Save Drawing</button>
-        <button id="loadBtn">Load Last Drawing</button>
+        <button id="loadBtn">Load Last Drawing1</button>
     </div>
 	<script th:src="${'static/js/app.js'}"></script>
     <!--<script src="app.js"></script>-->
